# namingpaper-desktop

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-Hant.md  pyproject.toml
.claude/skills/release-desktop/: SKILL.md
macos/NamingPaper/NamingPaper/: Info 2.plist  Info.plist  Localizable.xcstrings
macos/NamingPaper/NamingPaper.xcodeproj/: project.pbxproj
openspec/: project.md
openspec/changes/add-i18n-support/: proposal.md  tasks.md
openspec/changes/add-omlx-provider/: tasks.md
openspec/changes/add-paper-flow-redesign/: tasks.md
openspec/changes/add-pdf-editor/: design.md  proposal.md  tasks.md
openspec/changes/download-stored-papers/: design.md
openspec/changes/edit-filename-template/: design.md  proposal.md  tasks.md
openspec/changes/first-launch-onboarding/: proposal.md  tasks.md
openspec/changes/integrate-lm-studio/: design.md  proposal.md
openspec/changes/paper-library/: proposal.md
openspec/specs/add-papers/: spec.md
openspec/specs/app-shell/: spec.md
openspec/specs/cloud-backup/: spec.md
openspec/specs/cloud-sync/: spec.md
openspec/specs/command-palette/: spec.md
openspec/specs/document-indexing/: spec.md
openspec/specs/filestash-ui-integration/: spec.md
openspec/specs/library-browser/: spec.md
openspec/specs/library-cli/: spec.md
openspec/specs/lmstudio-provider/: spec.md
openspec/specs/omlx-provider/: spec.md
src/namingpaper/: batch.py  categorizer.py  cli.py  config.py  database.py  download.py  extractor.py  formatter.py  library.py  models.py  summarizer.py  template.py
tests/: test_add_pre_extracted.py  test_categorizer.py  test_cli.py  test_config.py  test_database.py  test_download.py  test_formatter.py  test_library_e2e.py  test_library_models.py  test_omlx_provider.py  test_provider_base.py  test_summarizer.py  test_template.py
(+126 files in other folders)
